--- a/index.html
+++ b/index.html
@@ -2,12 +2,29 @@
     <head>
 
     </head>
-    <body style="background-color:grey">
+    <body style="background-color:grey;color:white">
         <h1 align="Center">FUNDAMENTAL WEB</h1>
         <marquee>HTML <i>JavaScript CSS PHP</i></marquee>
-        <p><span style="color:black;">HyperText Markup Language(HTML)</span> adalah sebuah bahasa markup yang digunakan untuk membuat sebuah halaman web, menampilkan <del>berbagi</del> berbagai informasi di dalam sebuah Penjelajahan web Internet dan formating hypertext sederhana yang dituliskan kedalam berkas format ASCII agar dapat menghasilkan tampilan wujud yang terintegrasi</p>
-        <p><span style="color:black;">CSS<sup>(Cascading Style Sheet)</sup></span> adalah kependekan dari Cascading Syle Sheet, CSS merupakan kumpulan kode-kode yang bertujuan untuk menghias dan mengatur gaya tampilan/layout halaman web supaya lebih elegan dan menarik. CSS cascading sy adalah sebuah teknologi internet yang direkomendasikan oleh World Wide Web Consortium atau W3C apda tahun 1996.</p>
-        <p><span style="color:black;"><i>JavaScipt</i></span> adalah bahasa skrip yang populer di internet dan dapat bekerja di sehaian besar penjelajah web populer seperti<sub>Internet Explorer</sub><sup>(IE)</sup>, Mozilla, Firefox, Netscape dan Opera. Kode <i>JavaScipt</i> dapat disisipkan dalam halaman web menggunakan big SCRIPT.</p>
-        <p><span style="color:black;">PHP</span> adalah singkatan dari <sub>"PHP: HyperText Preprocessor"</sub>, yaiut bahasa pemrograman yang digunakan secara luas untuk penangana pembuatan dan pemngembangan sebuah situs web dan bisa digunakan bersamaan dengan HTML. PHP diciptakan oleh <b>Rasmus Lerdorf</b> pertama kali tahun 1994.</p>
+        <p style="color:white;">
+            <b style="color:black;">
+                HyperText Markup Language(HTML)
+            </b> 
+            adalah sebuah bahasa markup yang digunakan untuk membuat sebuah halaman web, 
+            menampilkan <del>berbagi</del> berbagai informasi di dalam sebuah Penjelajahan 
+            web Internet dan formating hypertext sederhana yang dituliskan kedalam berkas 
+            format ASCII agar dapat menghasilkan tampilan wujud yang terintegrasi
+        </p>
+
+        <p><b style="color:black;">CSS<i></i><sup>(Cascading Style Sheet)</sup></b></i> adalah kependekan dari Cascading Syle Sheet, CSS merupakan kumpulan kode-kode yang bertujuan untuk menghias dan mengatur gaya tampilan/layout halaman web supaya lebih elegan dan menarik. CSS cascading sy adalah sebuah teknologi internet yang direkomendasikan oleh World Wide Web Consortium atau W3C apda tahun 1996.</p>
+        <p><b style="color:black;"><i>JavaScipt</i></b> adalah bahasa skrip yang populer di internet dan dapat bekerja di sehaian besar penjelajah web populer seperti<sub>Internet Explorer</sub><sup>(IE)</sup>, Mozilla, Firefox, Netscape dan Opera. Kode <i>JavaScipt</i> dapat disisipkan dalam halaman web menggunakan big SCRIPT.</p>
+        <p><b style="color:black;">PHP</b> adalah singkatan dari <sub>"PHP: HyperText Preprocessor"</sub>, yaiut bahasa pemrograman yang digunakan secara luas untuk penangana pembuatan dan pemngembangan sebuah situs web dan bisa digunakan bersamaan dengan HTML. PHP diciptakan oleh <b>Rasmus Lerdorf</b> pertama kali tahun 1994.</p>
+        <p><ins>FUNGSI HTML</ins></p>
+        <OL>
+            <li>Mengintegrasikan gambar dengan tulis</li>
+            <li>Membuat Pranala</li>
+            <li>Membuat form interaktif</li>
+            <li>Mengintegrasikan berkas suara dan rekaman gambar hidup.</li>
+        </OL>
+        <h6 align="Center">copyright ICLABS<sup>TM</sup>2019</h6>
     </body>
 </html>
